[tool.poetry]
name = "pycalc"
version = "0.1.0"
description = ""
authors = ["Zaid"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pyinstaller = "^6.10.0"
pygame = "2.5.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
poethepoet = "^0.28.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
build = "pyinstaller --clean --noconsole --name=DuckHunt main2.py "

